7.x-1.14.x
----------
 - #1979 Allow users to set Groups on standalone resources.

7.x-1.14
--------
 - #2174 Fix access to revisions for anonymous users when dkan_workflow is enabled.
 - #2175 Removed video content from the About page. Removed or replaced references to Granicus.
 - #2075 DKAN Harvest: Modified batch process to split harvest migrations in chunks.
 - #2145 Front page hero image no longer requests empty URL if variable empty.
 - #2124 Add results count and increase results per page on the harvest dashboard view.
 - #2082 Add UI for generating ODSM file caches.
 - #2058 Improve messages displayed when creating a harvest source.
 - #2058 Fix harvest bug when filtering by a key that has 0 matches.
 - #2102 Hide toggle buttons inside preview embeds.
 - #1946 Fix Datastore API limit not applying consistently.
 - #2109 Fix ODSM language token to solve validation errors.
 - #2019 DKAN Workflow: Fix 'My Drafts' view to restore content to original user after rejection.
 - #1970 Adds topics to harvested datasets on migration.
 - #1975 Add landingPage to data.json feed.
 - #1967 Added search title to /search panels.
 - #1997 Recline.view.nvd3.js: Fixed tooltips that were not being displayed when using some percentage formats.
 - #1988 Count and delete resources on Harvest source deletion.
 - #1951 Fixed display of number of Groups a user belongs to on the user profile page.
 - #1968 Fixed "Reset" button on search page to also resets facets.
 - #1985 Add documentation for resource behavior on harvested datasets.
 - #1907 Added back TAB delimiter option for datastore imports.
 - #1955 Update ahoy docker tooling for local environment usecase.
 - #1903 Add support for tab-delimited files (TSV) in resources/recline preview.
 - #2001 Improve REST API documentation.
 - #1991 Fix host IP replacement on script used to recconect the MySQL container. 
 - #1942 DevOps: Restore drush commands to deal with orphaned resources.