@@ -1,5 +1,17 @@
 // @file
 // Print Styles
 // --------------------------------------------------
-  
 
+
+@media print {
+  #block-dkan-sitewide-dkan-sitewide-search-bar {
+    display: none;
+  }
+
+  img, tr, svg, .card-chart {
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+  }
+}
+    
